Enhance build.yml with concurrency configuration
Add concurrency settings to the build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
       - master
     paths-ignore:
       - "**/README.md"
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
 permissions:
   contents: write
 jobs:
